tests/baselines/reference/importTypeAmbientMissing.errors.txt
tests/cases/conformance/types/import/importTypeAmbientMissing.ts(8,17): error TS2307: Cannot find module 'fo' or its corresponding type declarations.


==== tests/cases/conformance/types/import/importTypeAmbientMissing.ts (1 errors) ====
    declare module "foo" {
        interface Point {
            x: number;
            y: number;
        }
        export = Point;
    }
    const x: import("fo") = { x: 0, y: 0 }; // typo, error
                    ~~~~
!!! error TS2307: Cannot find module 'fo' or its corresponding type declarations.
    
    